--- a/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
@@ -45,9 +45,11 @@
 
     <Button
         android:id="@+id/bt_login"
-        android:layout_width="134dp"
+        android:layout_width="0dp"
         android:layout_height="53dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="125dp"
         android:background="@android:drawable/editbox_background_normal"
         android:backgroundTint="#6D82E6"
         android:text="@string/login"
@@ -84,23 +86,27 @@
 
     <EditText
         android:id="@+id/et_contrasena2"
-        android:layout_width="196dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="55dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_password"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_password" />
 
     <EditText
         android:id="@+id/et_nombreUsuario"
-        android:layout_width="196dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="55dp"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_userlog"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_userlog" />
 </androidx.constraintlayout.widget.ConstraintLayout>
