--- a/Auriculoterapia/app/src/main/res/layout/activity_settings.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_settings.xml
@@ -11,9 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="27dp"
+        android:layout_marginTop="8dp"
         android:text="Nombre:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_settingNombre2"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_settingApellido"
@@ -76,9 +77,7 @@
         android:layout_marginStart="164dp"
         android:layout_marginTop="33dp"
         android:layout_marginEnd="164dp"
-        android:layout_marginBottom="251dp"
         android:text="Cerrar sesión"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_settingKeyWord2" />
@@ -88,10 +87,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="110dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/tv_settingNombre"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_settingNombre"
+        app:layout_constraintStart_toEndOf="@+id/tv_settingNombre" />
 
     <TextView
         android:id="@+id/tv_settingApellido2"
