--- a/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="113dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:gravity="start|top"
@@ -27,11 +27,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="70.0"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/tv_peso"
@@ -51,11 +51,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="1.70"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tv_altura"
@@ -65,7 +65,7 @@
         android:id="@+id/btn_registrarTratamiento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="Registrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -86,9 +86,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
+        android:layout_marginTop="42dp"
         android:text="Síntomas:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/et_Sintomas"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_altura" />
 
     <TextView
         android:id="@+id/tv_peso"
@@ -121,7 +122,7 @@
         android:id="@+id/btn_InsertarImagen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="70dp"
         android:text="Subir Foto"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +133,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="85dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:gravity="start|top"
@@ -156,11 +157,11 @@
     <TextView
         android:id="@+id/tv_urlImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/btn_InsertarImagen"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_examinarFoto"
-        app:layout_constraintTop_toBottomOf="@+id/et_Sintomas" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_sintomas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
