--- a/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
@@ -45,8 +45,8 @@
 
     <Button
         android:id="@+id/bt_login"
-        android:layout_width="0dp"
-        android:layout_height="53dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="125dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="125dp"
