--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="82dp"
         android:layout_marginTop="70dp"
+        android:inputType="phone"
         android:text="@string/num_celular_text"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="60dp"
+        android:inputType="phone"
         android:hint="Ingrese su número"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
