--- a/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_ForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="16dp"
         android:text="@string/str_cambiar_contrase_a"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -23,7 +23,7 @@
         android:layout_width="189dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/str_keywordhint"
         android:inputType="textPersonName"
@@ -34,50 +34,37 @@
         android:id="@+id/tv_settingKeyWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="45dp"
         android:text="@string/str_keywordLabel"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/et_keyWord2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_usuario" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_keyWord2"
+        app:layout_constraintEnd_toStartOf="@+id/et_keyWord2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginEnd="14dp"
         android:text="@string/str_nueva_contrase_a"
-        app:layout_constraintBottom_toTopOf="@+id/btn_forgotpassword"
-        app:layout_constraintEnd_toStartOf="@+id/et_password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_password"
+        app:layout_constraintEnd_toStartOf="@+id/et_password" />
 
     <Button
         android:id="@+id/btn_forgotpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="372dp"
+        android:layout_marginTop="24dp"
         android:text="@string/str_cambiar"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="188dp"
         android:layout_height="43dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -88,20 +75,17 @@
         android:id="@+id/tv_usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="135dp"
-        android:layout_marginEnd="90dp"
+        android:layout_marginEnd="80dp"
         android:text="Usuario:"
-        app:layout_constraintEnd_toStartOf="@+id/et_usuario"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_usuario"
+        app:layout_constraintEnd_toStartOf="@+id/et_usuario" />
 
     <EditText
         android:id="@+id/et_usuario"
         android:layout_width="188dp"
         android:layout_height="45dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
         android:inputType="textPersonName"
