--- a/Auriculoterapia/app/src/main/res/layout/activity_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_register.xml
@@ -29,6 +29,8 @@
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
         android:inputType="textPersonName"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
+        android:maxLength="15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvNombre"
         app:layout_constraintTop_toBottomOf="@+id/tv_Registro" />
@@ -106,6 +108,8 @@
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="@string/str_apellidohint"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
+        android:maxLength="15"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvApellido"
