--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
@@ -16,8 +16,8 @@
         android:inputType="phone"
         android:text="@string/num_celular_text"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/celularEditText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/celularEditText" />
 
     <EditText
         android:id="@+id/celularEditText"
@@ -39,7 +39,6 @@
         android:layout_marginStart="60dp"
         android:text="@string/date_text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/linearDateLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearDateLayout" />
 
@@ -47,32 +46,52 @@
         android:id="@+id/linearDateLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="56dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/celularEditText">
 
-        <TextView
-            android:id="@+id/textViewFechaPaciente"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="16dp"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
 
-            app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+            <TextView
+                android:id="@+id/textViewFechaPaciente"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="16dp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
 
-        <ImageButton
-            android:id="@+id/dateButtonDialogPatient"
-            android:layout_width="45dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:background="@color/colorPrimary"
-            android:src="@drawable/date_image"
-            android:tint="#F6F4F4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+                app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+
+            <ImageButton
+                android:id="@+id/dateButtonDialogPatient"
+                android:layout_width="45dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/date_image"
+                android:tint="#F6F4F4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/errorVacioFechaPaciente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:text="Debes seleccionar una fecha"
+            android:textAlignment="textEnd"
+            android:textColor="#D51212"
+            android:textSize="12dp"
+            android:visibility="gone" />
+
     </LinearLayout>
 
     <TextView
@@ -82,7 +101,6 @@
         android:layout_marginStart="64dp"
         android:text="@string/time_text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/linearTimeLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearTimeLayout" />
 
@@ -90,29 +108,44 @@
         android:id="@+id/linearTimeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
 
         android:layout_marginEnd="56dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearDateLayout">
 
-        <TextView
-            android:id="@+id/pacienteTextViewHora"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginEnd="16dp"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
 
-        <ImageButton
-            android:id="@+id/timeButtonDialogPatient"
-            android:layout_width="45dp"
-            android:layout_height="40dp"
-            android:background="@color/colorPrimary"
-            android:src="@drawable/time_image"
-            android:tint="#F6F4F4"
+            <TextView
+                android:id="@+id/pacienteTextViewHora"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginEnd="16dp"
+                android:textSize="18sp" />
 
-            />
+            <ImageButton
+                android:id="@+id/timeButtonDialogPatient"
+                android:layout_width="45dp"
+                android:layout_height="40dp"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/time_image"
+                android:tint="#F6F4F4" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/errorVacioHoraPaciente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="Debes seleccionar una hora"
+            android:textAlignment="textEnd"
+            android:textColor="#D51212"
+            android:textSize="12dp"
+            android:visibility="gone" />
     </LinearLayout>
 
     <TextView
@@ -123,20 +156,38 @@
         android:text="@string/attention_text"
         android:textAlignment="textEnd"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/spinnerAttentionPatient"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/spinnerAttentionPatient"
-        app:layout_constraintVertical_bias="0.523" />
+        app:layout_constraintTop_toTopOf="@+id/attentionLayoutSpinner" />
 
-    <Spinner
-        android:id="@+id/spinnerAttentionPatient"
-        android:layout_width="190dp"
+    <LinearLayout
+        android:id="@+id/attentionLayoutSpinner"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="48dp"
-        android:spinnerMode="dropdown"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearTimeLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearTimeLayout">
+
+        <Spinner
+            android:id="@+id/spinnerAttentionPatient"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:spinnerMode="dropdown"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearTimeLayout" />
+
+        <TextView
+            android:id="@+id/errorVacioTipoAtencion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debes seleccionar el tipo de\natención"
+            android:textAlignment="textEnd"
+            android:textColor="#D51212"
+            android:textSize="12dp"
+            android:visibility="gone" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/registerAppointmentButtonPatient"
