--- a/Auriculoterapia/app/src/main/res/layout/appointment_item.xml
+++ b/Auriculoterapia/app/src/main/res/layout/appointment_item.xml
@@ -46,6 +46,15 @@
                 android:layout_marginStart="10dp"
                 android:textSize="16sp"/>
 
+            <TextView
+                android:id="@+id/cardPhoneTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                />
+
         </LinearLayout>
 
         <LinearLayout
