--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
@@ -16,6 +16,7 @@
         android:inputType="phone"
         android:text="@string/num_celular_text"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/celularEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/celularEditText" />
 
@@ -39,6 +40,7 @@
         android:layout_marginStart="60dp"
         android:text="@string/date_text"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearDateLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearDateLayout" />
 
@@ -64,6 +66,9 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="16dp"
                 android:textSize="18sp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:clickable="true"
                 app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
 
                 app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
@@ -95,12 +100,13 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/pacienteTextView4"
+        android:id="@+id/tvHora"
         android:layout_width="39dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:text="@string/time_text"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/linearTimeLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/linearTimeLayout" />
 
@@ -125,6 +131,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_marginEnd="16dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:clickable="true"
                 android:textSize="18sp" />
 
             <ImageButton
@@ -165,7 +174,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearTimeLayout">
 
@@ -174,19 +183,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearTimeLayout" />
+            android:spinnerMode="dropdown" />
 
-        <TextView
+       <TextView
             android:id="@+id/errorVacioTipoAtencion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Debes seleccionar el tipo de\natención"
-            android:textAlignment="textEnd"
-            android:textColor="#D51212"
-            android:textSize="12dp"
-            android:visibility="gone" />
+            android:layout_alignRight="@+id/spinnerAttentionPatient"
+            android:layout_alignBottom="@+id/spinnerAttentionPatient"
+            android:focusable="true"
+           android:layout_gravity="center"
+            android:visibility="gone"
+            android:focusableInTouchMode="true"
+            android:clickable="true"/>
     </LinearLayout>
 
     <Button
@@ -195,13 +204,13 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="68dp"
         android:text="@string/register_appointment_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/celularTextView5" />
+        app:layout_constraintTop_toBottomOf="@+id/attentionLayoutSpinner" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
