--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
@@ -12,7 +12,7 @@
             android:id="@+id/pacienteTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="32dp"
             android:text="@string/patient_text"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/layoutSelectorPacientes"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -41,10 +41,10 @@
                     android:id="@+id/errorVacioPacienteEspecialista"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Debes seleccionar un paciente"
-                    android:textColor="#D51212"
-                    android:layout_gravity="start"
-                    android:textSize="12dp"
+                    android:layout_gravity="center"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:visibility="gone" />
 
         </LinearLayout>
@@ -83,6 +83,9 @@
                             android:layout_height="32dp"
                             android:layout_marginEnd="16dp"
                             android:textSize="18sp"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:clickable="true"
                             app:layout_constraintEnd_toStartOf="@+id/timeButtonDialog"
                             app:layout_constraintTop_toBottomOf="@+id/patientSpinner" />
 
@@ -141,6 +144,9 @@
                             android:layout_height="32dp"
                             android:layout_marginEnd="16dp"
                             android:textSize="18sp"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
+                            android:clickable="true"
                             app:layout_constraintEnd_toStartOf="@+id/timeButtonDialog"
                             app:layout_constraintTop_toBottomOf="@+id/linearLayoutDateSpecialist" />
 
@@ -177,6 +183,7 @@
             android:text="@string/attention_text"
             android:textAlignment="textEnd"
             android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutAtencion"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/linearLayoutAtencion" />
 
@@ -186,7 +193,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayoutTimeSpecialist">
 
@@ -204,11 +211,14 @@
                     android:id="@+id/errorVacioTipoAtencionEspecialista"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Debes seleccionar el tipo de\natención"
-                    android:textAlignment="textEnd"
-                    android:textColor="#D51212"
-                    android:textSize="12dp"
-                    android:visibility="gone" />
+                    android:layout_alignRight="@+id/tipoAtencionSpinner"
+                    android:layout_alignBottom="@+id/tipoAtencionSpinner"
+                    android:focusable="true"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:focusableInTouchMode="true"
+                    android:clickable="true"
+                     />
 
         </LinearLayout>
         <Button
