--- a/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
@@ -88,6 +88,8 @@
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
+        android:maxLength="15"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ForgotPassword" />
