--- a/Auriculoterapia/app/src/main/res/layout/activity_treatment_request.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_treatment_request.xml
@@ -221,7 +221,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_gravity="center">
 
                 <Button
                     android:id="@+id/solicitudResponderBoton"
